force-app/main/default/objects/Fault_Alert_Setting__mdt/Fault_Alert_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Platform_Fault_Logger shared error-handling framework: whether to send email alerts on logged faults, to whom, and the minimum severity that triggers an alert. One "Default" record drives the behaviour org-wide. Logging always happens; alerting is opt-in.</description>
    <label>Fault Alert Setting</label>
    <pluralLabel>Fault Alert Settings</pluralLabel>
</CustomObject>