force-app/main/default/objects/Fault_Alert_Setting__mdt/fields/Alert_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email_To__c</fullName>
    <description>Semicolon-separated recipient address(es) for fault alerts when Alert_Enabled is true.</description>
    <label>Alert Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>