force-app/main/default/objects/Fault_Alert_Setting__mdt/fields/Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Alert_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Platform_Fault_Logger emails Alert_Email_To on faults at or above Min_Severity. Default false = log only (behaviour-neutral on deploy).</description>
    <label>Alert Enabled</label>
    <type>Checkbox</type>
</CustomField>