force-app/main/default/objects/Fault_Alert_Setting__mdt/fields/Min_Severity__c.field-meta.xml
<CustomField>
    <fullName>Min_Severity__c</fullName>
    <defaultValue>&quot;Error&quot;</defaultValue>
    <description>Minimum severity that triggers an alert (informational; current logic alerts on severity = Error).</description>
    <label>Min Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>